Отличие margin от padding и как они влияют на размеры блока Как вычисляются размеры блока Поглощение отступов Псевдоэлементы

--- a/index.html
+++ b/index.html
@@ -170,11 +170,55 @@
     <p class="description">Обтекание</p>
     <div class="container">
         <div class="box"></div>
+        <div class="box" style="float: left"></div>
         <p class="description">float — элемент с установленным float (элемент <span class="code">&lt;div&gt;</span>  в данном случае)
         изымается из нормального потока документа и крепится с левой стороны от родительского контейнера
-        (элемент <span class="code">&lt;container&gt;</span> в данном случае). Любой контент, который следует ниже за обтекаемым элементом в макете при нормальном
+        (элемент <span class="code">.container</span> в данном случае). Любой контент, который следует ниже за обтекаемым элементом в макете при нормальном
         потоке теперь будет оборачивать его вокруг, заполняя пространство справа от него начиная на той же высоте что и вершина
-        обтекаемого элемента. Там он остановится</p>
+        обтекаемого элемента. Там он остановится. <br>Используя свойство
+        <span class="code">clear: both</span> можно сделать границу контейнера, включающей в себя float блок, т.к. его действие будет отменяться этим css свойством</p>
+        <div style="clear: both"></div>
     </div>
+    <hr>
+    <p class="description">Абсолютное позиционирование</p>
+    <div class="container" style="position: relative; height: 150px;">
+        <div class="box" style="float: none; position: absolute; bottom: 20px; left: 60px; display: flex; justify-content: center; align-items: center">
+            <span class="code" style="margin: auto; display: block">bottom: 10px<br>
+                left: 20px</span>
+        </div>
+    </div>
+    <p class="description">
+        Визуально переносит элемент на новое место.
+        Новое место вычисляется по координатам left/top/right/bottom относительно ближайшего позиционированного родителя. Если такого родителя нет, то им считается окно.
+        Ширина элемента по умолчанию устанавливается по содержимому.
+        Можно указать противоположные границы left/right (top/bottom). Элемент растянется.
+        Окружающие элементы заполняют освободившееся место
+    </p>
+    <hr>
+    <p class="description">Содержащий блок</p>
+    <p class="description">
+        Положение и размер блока(ов) элемента иногда вычисляются относительно некоторого прямоугольника,
+        называемого содержащим блоком элемента (containing block). Содержащий блок — это блок,
+        который содержит другой элемент. В случае нормального потока корневой элемент html является содержащим блоком
+        для элемента body, который, в свою очередь, является содержащим блоком для всех его дочерних элементов и так далее.
+        В случае позиционирования содержащий блок полностью зависит от типа позиционирования. Содержащий блок элемента
+        определяется следующим образом:
+        <ul class="description">
+            <li class="description">Содержащий блок, в котором находится корневой элемент, представляет собой прямоугольник —
+                так называемый начальный содержащий блок.</li>
+            <li class="description">Для некорневого элемента с position: static; или position: relative; содержащий блок
+                формируется краем области содержимого ближайшего родительского блока уровня блока, ячейки таблицы или уровня строки.</li>
+            <li class="description">Содержащим блоком элемента с position: fixed; является окно просмотра</li>
+            <li class="description">Для некорневого элемента с position: absolute; содержащим блоком устанавливается ближайший родительский элемент
+                со значением position: absolute/relative/fixed следующим образом:
+                <ul class="description">
+                    <li class="description">если предок — элемент уровня блока, содержащим блоком будет область содержимого плюс поля элемента padding;</li>
+                    <li class="description">если предок — элемент уровня строки, содержащим блоком будет область содержимого;</li>
+                    <li class="description">если предков нет, то содержащий блок элемента определяется как начальный содержащий блок.</li>
+                    <li class="description">Для «липкого» блока содержащим блоком является ближайший предок с прокруткой или окно просмотра, в противном случае.</li>
+                </ul>
+            </li>
+        </ul>
+    </p>
 </body>
 </html>
